[package]
name = "lune-std-mongo"
version = "0.3.4"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lune-org/lune"
description = "Lune standard library - Luau"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau", "luau-jit", "async"] }
mongodb = "3.5.1"
bson = "3.1.0"
futures = "0.3"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lune-utils = { version = "0.3.4", path = "../lune-utils" }
